--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A pure Javascript library for code evalutation in limited and isolated dom part and context",
   "main": "index.js",
   "scripts": {
-    "test": "mocha-webpack --webpack-config webpack.dev.js './test/test.js'",
+    "test": "webpack --config webpack.test.js && mocha test/temp/*.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
@@ -27,9 +27,8 @@
   "homepage": "https://github.com/AndXD/JS-Sandbox#readme",
   "dependencies": {},
   "devDependencies": {
-    "jsdom": "^11.11.0",
+    "browser-env": "^3.2.5",
     "mocha": "^5.2.0",
-    "mocha-webpack": "https://github.com/thomasmichaelwallace/mocha-webpack#build",
     "webpack-merge": "^4.1.2"
   }
 }
